Testing adding image

--- a/index.html
+++ b/index.html
@@ -232,6 +232,15 @@
 		  text-decoration: underline;
 		}
 
+		.complex1 {
+	     	background: url("graphic.jpg");
+			 background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    background-size: 50% 50%;
+			display: inline-block;
+			color: #FFFFFF;
+		}
 
     </style>
 </head>
@@ -253,12 +262,12 @@
 			<p class="topic-title">Arrays, Lists, Autoboxing and Unboxing Based</p>
 			<div class="topic-body">
 				<div>
-					<a href="https://github.com/maciej-mazur-github/JAVA_Banking-Simulation" target="_blank">Banking Simulation</a>
+					<a href="https://github.com/maciej-mazur-github/JAVA_Banking-Simulation" target="_blank">Banking Simulation</a><div class="complex1"></div>
 					<p class="project-description">Create a bank. Add and/or remove specific branches, customers or transactions. List all customers within a specific branch or all bank customers<span class="dots">...</span><span class="more"> if you need. Safety measures were taken to avoid adding a duplicated branch, to remove a non-existent branch, to add (or remove) a customer to a non-existent branch, to duplicate a customer within the same branch, to add a transaction to a non-existent branch or non-existent customer, to remove a non-existent customer from a branch.</span><span class="expand-collapse">Read more</span></p>
 				</div>
 
 				<div>
-					<a href="https://github.com/maciej-mazur-github/JAVA_Finding-Minimum-Element-In-Array" target="_blank">Finding Minimum Element In Array</a>
+					<a href="https://github.com/maciej-mazur-github/JAVA_Finding-Minimum-Element-In-Array" target="_blank">Finding Minimum Element In Array<img src="graphic2.jpg" alt="Complexity level"></a>
 					<p class="project-description">Simple minimum value finder working on an array built by the user. The array is built dynamically - the user provides consecutive integer values, also decides about the size of the array.</p>
 				</div>
 
