--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
 		.complex1 {
 	     	background: url("graphic.jpg");
 			background-repeat: no-repeat;
-			width: 50px;
-			height: 50px;
-			background-size: 50% 50%;
+			width: 15px;
+			height: 15px;
+			background-size: 100%;
 			display: inline-block;
 			color: #FFFFFF;
 		}
