--- a/index_java.html
+++ b/index_java.html
@@ -189,19 +189,19 @@
 		.paragraph-title {
 		    margin-top: 5em;
 			text-align: center;
-			font-size: 2em;
+			font-size: 2rem;
 		}
 
 		.topic-title {
 		  text-align: center;
 		  margin-bottom: 0.9em;
-		  font-size: 1.5em;
+		  font-size: 1.5rem;
 		}
 
 		a {
 		  text-decoration: none;
 		  color: #00c5da;
-		  font-size: 1.1em;
+		  font-size: 1.1rem;
 		  display: inline-block;
 		}
 
@@ -212,7 +212,7 @@
 
 		.project-description {
 		  color: white;
-		  font-size: 0.95em;
+		  font-size: 0.95rem;
 		  text-align: left;
 		  margin: 5px 10% 30px 3%;
 
@@ -227,7 +227,7 @@
 		  display: inline;
 		  text-decoration: none;
 		  color: #00c5da;
-		  font-size: 1em;
+		  font-size: 0.95rem;
 		  background-color: transparent;
 		  align: left;
 		  padding: 0 0 0 5px;
@@ -313,7 +313,7 @@
 		    left: 50%;
 		    transform: translate(-50%, 0);
 		    height: 100px;
-		    width: 20%;
+		    min-width: 25%;
 		    display: flex;
 		    justify-content: center;
 
@@ -322,7 +322,7 @@
 		.menu-item {
 		    background-color: var(--color-darkblue-alpha);
 		    border: 1px;
-		    display: inline-block;
+		    //display: inline-block;
 		    height: 100px;
 		    width: 50%;
 		    color: black;
@@ -347,7 +347,7 @@
 
 		.menu-item-body-1 {
             background: hsla(240, 30%, 58%, 0.56);
-		    padding: 1rem 0.625rem;
+		    padding: 4% 0.625rem;
 		    border-radius: 0.25rem;
 		    margin: 0rem 0rem 1rem 0rem;
 		    position: absolute;
@@ -355,21 +355,23 @@
 		    top: 50%;
 		    transform:translate(0, -50%);
 		    width: 45%;
-		    font-size: 1.5em;
+		    height: 70%;
+		    font-size: 1.2rem;
 		    text-align: center;
 		}
 
 		.menu-item-body-2 {
             background: hsla(240, 30%, 58%, 0.56);
-		    padding: 1rem 0.625rem;
+		    padding: 4% 0.625rem;
 		    border-radius: 0.25rem;
 		    margin: 0rem 0rem 1rem 0rem;
 		    position: absolute;
 		    right: 3%;
 		    width: 45%;
+		    height: 70%;
 		    top: 50%;
 		    transform:translate(0, -50%);
-		    font-size: 1.5em;
+		    font-size: 1.2rem;
 		    text-align: center;
 		}
 
