--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 			top: 10%;
 			transform: translate(-50%, -10%);
 			width: 100%;
+			height: 1vw;
 			//margin: 3.125rem auto 0 auto;
 		}
 
@@ -240,24 +241,44 @@
 		.language-choice {
 		  position: absolute;
 		  left: 50%;
-		  top: 50%;
-		  transform: translate(-50%, 70%);
-		  width: 100%;
+		  top: 10vw;
+		  transform: translate(-50%, -20%);
+		  //width: 100%;
+		  min-width: 800px;
 		}
 
 
-
-		.wrapper {
+		.wrapper1 {
 		  background: var(--color-darkblue-alpha);
 		  padding: 0.5rem 0.1rem;
 		  border-radius: 0.25rem;
 		  margin: 1rem 1rem 1rem 1rem;
+		  position: absolute;
+		  left: 5%;
 		  display: inline-block;
 		}
 
-		.wrapper a {
+		.wrapper1 a {
 			text-decoration: none;
 		}
+
+
+		.wrapper2 {
+		  background: var(--color-darkblue-alpha);
+		  padding: 0.5rem 0.1rem;
+		  border-radius: 0.25rem;
+		  margin: 1rem 1rem 1rem 1rem;
+		  position: absolute;
+		  right: 5%;
+		  display: inline-block;
+		}
+
+		.wrapper2 a {
+			text-decoration: none;
+		}
+
+
+
 
 		.topic-body:hover {
 			background: var(--color-white-alpha);
@@ -342,7 +363,7 @@
 
 
 	<div class="language-choice">
-		<div class="wrapper">
+		<div class="wrapper1">
 
 			<a href="index_java.html" alt="Java Projects" title="Go to Java Projects section">
 				<div class="topic-body">
@@ -356,12 +377,12 @@
 
 
 
-		<div class="wrapper">
+		<div class="wrapper2">
 
 			<a href="index_cpp.html" alt="C++ Projects" title="Go to C++ Projects section">
 				<div class="topic-body">
 					<div>
-						<p class="topic-title">C++ Projects <br>with no commit history</p>
+						<p class="topic-title">C++ Projects <br>with commit history</p>
 					</div>
 				</div>
 			</a>
